# demetrios

./: CHANGELOG.md  CLAUDE.md  DOCUMENTATION_TEMPLATE.md  INDEX.md  LANGUAGE_SPECIFICATION.md  PROMPT_CLAUDE_CODE_DEMETRIOS.md  PROMPT_DEMETRIOS_DAY2.md  PROMPT_DEMETRIOS_DAY3.md  PROMPT_DEMETRIOS_DAY4.md  PROMPT_DEMETRIOS_DAY5.md  README.md  SYSTEM_PROMPT_DEMETRIOS.md
compiler/: Cargo.toml
compiler/src/: common.rs  diagnostics.rs  lib.rs  main.rs
compiler/src/ast/: mod.rs
compiler/src/check/: mod.rs
compiler/src/codegen/: cranelift.rs  gpu.rs  llvm.rs  mod.rs
compiler/src/codegen/gpu/: intrinsics.rs  ir.rs  mod.rs  ptx.rs  runtime.rs
compiler/src/codegen/llvm/: codegen.rs  debug.rs  linker.rs  mod.rs  target.rs  types.rs
compiler/src/doc/: doctest.rs  extract.rs  mod.rs  model.rs  parser.rs
compiler/src/doc/book/: mod.rs
compiler/src/doc/html/: render.rs  syntax.rs  templates.rs
compiler/src/effects/: inference.rs
compiler/src/hir/: mod.rs
compiler/src/hlir/: builder.rs  ir.rs  lower.rs  mod.rs
compiler/src/interp/: eval.rs  mod.rs  value.rs
compiler/src/lexer/: mod.rs  tokens.rs
compiler/src/lsp/: diagnostics.rs  mod.rs  semantic_tokens.rs  server.rs
compiler/src/ownership/: checker.rs  mod.rs  state.rs
compiler/src/parser/: mod.rs  recovery.rs
compiler/src/pkg/: build.rs  cli.rs  manifest.rs  mod.rs  registry.rs  resolver.rs
compiler/src/refinement/: predicate.rs  qualifiers.rs  solver.rs
compiler/src/repl/: mod.rs
compiler/src/resolve/: resolver.rs  symbols.rs
compiler/src/sourcemap/: files.rs
compiler/src/types/: core.rs  effects.rs  mod.rs  ownership.rs  units.rs
compiler/tests/: effects_tests.rs  hlir_tests.rs  integration.rs  interpret.rs  lexer_tests.rs  linear_tests.rs  llvm_tests.rs  ownership_tests.rs  parser_tests.rs  refinement_tests.rs  resolve_tests.rs  sourcemap_tests.rs  units_tests.rs
docs/: ARCHITECTURE.md  lsp.md  refinement-types.md
docs/releases/: v0.12.0.md
editors/vscode/: package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: demetrios.tmLanguage.json
examples/: effects.d  gpu.d  hello.d  pharmacokinetics.d
