[package]
name = "demetrios"
version = "0.1.0"
edition = "2024"
authors = ["Demetrios Chiuratto Agourakis", "Dionisio Chiuratto Agourakis"]
description = "The Demetrios (D) programming language compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chiuratto-AI/demetrios"
keywords = ["compiler", "language", "scientific", "effects", "linear-types"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "dc"
path = "src/main.rs"

[lib]
name = "demetrios"
path = "src/lib.rs"

[dependencies]
# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Data structures
indexmap = "2"
petgraph = "0.6"
id-arena = "2"

# String interning
string-interner = "0.17"

# Serialization (for AST dump, etc.)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logos for lexer generation
logos = "0.14"

# Source code management
codespan-reporting = "0.11"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cranelift JIT (optional)
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-native = { version = "0.116", optional = true }
target-lexicon = { version = "0.12", optional = true }

# REPL
rustyline = "14"

# SMT Solver for refinement types (optional)
z3 = { version = "0.12", features = ["static-link-z3"], optional = true }

# LSP Server (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
dashmap = { version = "5.5", optional = true }
ropey = { version = "1.6", optional = true }
url = { version = "2.5", optional = true }

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"
proptest = "1"
insta = { version = "1", features = ["yaml"] }

[features]
default = []
# Enable LLVM backend (requires LLVM installation)
llvm = []
# Enable Cranelift JIT
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
    "dep:target-lexicon",
]
# Enable GPU codegen
gpu = []
# Enable Z3 SMT solver for refinement type verification
smt = ["dep:z3"]
# Enable LSP server
lsp = [
    "dep:tower-lsp",
    "dep:tokio",
    "dep:async-trait",
    "dep:dashmap",
    "dep:ropey",
    "dep:url",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compile times
opt-level = 0
debug = true

[[test]]
name = "lexer_tests"
path = "tests/lexer_tests.rs"

[[test]]
name = "parser_tests"
path = "tests/parser_tests.rs"

[[test]]
name = "units_tests"
path = "tests/units_tests.rs"

[[test]]
name = "sourcemap_tests"
path = "tests/sourcemap_tests.rs"

[[test]]
name = "refinement_tests"
path = "tests/refinement_tests.rs"

[[bin]]
name = "demetrios-lsp"
path = "src/bin/lsp.rs"
required-features = ["lsp"]
